# veos

./: .gitignore  .indent.pro  Makefile.am  README  autogen.sh  configure.ac  generate-arch_ops.py  veos.spec.in
conf/: Makefile.am  feature_list  log4crc  pseudo_veos.proto  ve-ived.options  ve.conf  vemodcode.conf  vemodcode.options  veos.conf  veos_power_throttle.options  veos_timer.options  veos_vm.options  veswap.options
conf/limits.d/: 10-veos.conf  Makefile.am
conf/sysctl.d/: 10-veos.conf  Makefile.am
debian/: control.in  copyright  rules.in  veos-dev.install.in  veos-headers.install.in  veos-libvepseudo-headers.install.in  veos.prerm  (+7 more)
include/: Makefile.am  align.h  comm_request.h  devmem_defs.h  ived_request.h  memory.h  mempolicy.h  mm_type.h  mman_ve.h  psm_defs.h  sysve.h  ve_atomic.h  ve_list.h  ve_memory.h  veacc_io_defs.h  veaio_defs.h  vecr_defs.h  vemva_layout.h  veos_arch_defs.h  veos_defs.h  veos_list.h  veos_pseudo_interface.h  veshm_defs.h  vhcall.h  vhshm_defs.h  vhve_request.h
lib/libived/: Makefile.am  ived_common.h  ived_ipc.c  ived_ipc.h  ived_misc.c  ived_misc.h
lib/libveosprotoc/: Makefile.am  ived.proto  proto_buff_schema.proto
lib/libveosprotoc/veosproto/: Makefile.am
lib/libveproductinfo/: Makefile.am  libveproductinfo.c  productinfo.h
lib/libvepseudo/: Makefile.am  libvepseudo.map  veos_arch_ops.h
lib/libvepseudo/amm/: Makefile.am  mem_xfer.c  mem_xfer.h  mm_transfer.c  mm_transfer.h  sys_mm.c  sys_mm.h  sys_shm.c  sys_shm.h  syscall_amm.c  syscall_amm.h  vemmr_mgmt.c  vemmr_mgmt.h  vemva_mgmt.c  vemva_mgmt.h  vh_mem_alloc.c  vh_mem_alloc.h
lib/libvepseudo/common/: Makefile.am  debugtool.c  debugtool.h  handle.h  libvepseudo.h  list.h  pseudo_veos_soc.c  pseudo_veos_soc.h  sys_common.c  sys_common.h  sys_pci.c  sys_pci.h  sys_veaio.c  sys_veaio.h  syscall.tbl  syscall_common.c  syscall_common.h  syscall_impl.h  syscalltbl.sh  sysve_os.c  sysve_os.h  ve_socket.c  ve_socket.h  ve_syscall.tbl  vhcall_os.c  vhcall_os.c.old  vhcall_os.h
lib/libvepseudo/ived/: Makefile.am  pseudo_cr.c  pseudo_cr.h  pseudo_devmem.c  pseudo_devmem.h  pseudo_ived_common.c  pseudo_ived_common.h  pseudo_vemm.c  pseudo_veshm.c  pseudo_veshm.h  pseudo_veshm_pgmode.c  pseudo_veshm_pgmode.h  pseudo_vhshm.c  pseudo_vhshm.h
lib/libvepseudo/loader/: Makefile.am  loader.c  loader.c.orig  loader.h
lib/libvepseudo/psm/: Makefile.am  arch_func_ptrs.c  exception.c  exception.h  process_mgmt_comm.c  process_mgmt_comm.h  pseudo_psmg_ipc.c  pseudo_psmg_ipc.h  pseudo_ptrace.c  pseudo_ptrace.h  pseudo_signal_ipc.c  pseudo_signal_ipc.h  signal_comm.c  signal_comm.h  sys_process_mgmt.c  sys_process_mgmt.h  sys_signal.c  syscall_psmg.c  syscall_psmg.h  syscall_signal.c  ve_futex.h  ve_signal.c  ve_signal.h
lib/libvepseudo/sys/: Makefile.am  sys_accelerated_io.c  sys_accelerated_io.h  sys_offload.c  sys_offload.h  syscall_lppg.c  syscall_lppg.h
lib/libveptrace/: Makefile.am  internal.h  ptrace_comm.c  ptrace_comm.h  ptrace_log.c  ptrace_log.h  sys_ptrace.c  ve_ptrace.h  veos_ptrace_comm.h.in
lib/libvhve/: Makefile.am  libvhve.c  vhve.h  vhve_common.c  vhve_common.h  vhve_socket.c  vhve_socket.h
scripts/: Makefile.am  ve-libc-check.in  ve_delete_process.in  ve_exec.in  ve_release_remote_resource.in  ve_release_resource.in
src/ived/: Makefile.am  cr_core.c  cr_core.h  cr_ipc.c  cr_ipc.h  ived.h  ived_core.c  ived_core.h  ived_cr_core.h  ived_ipc_func.c  ived_ipc_func.h  ived_main.c  ived_main.h  ived_veshm_core.h  veshm_core.c  veshm_core.h  veshm_ipc.c  veshm_ipc.h
src/pseudo/: Makefile.am  pseudo_process.c  pseudo_process.h
src/veos/: Makefile.am  veos_arch_ops.h
src/veos/amm/: Makefile.am  amm_api.h  amm_dma_api.c  amm_mem.c  amm_mem.h  amm_rpm_interfaces.c  amm_rpm_interfaces.h  amm_shm.c  amm_shm.h  amm_ve_req.c  buddy.c  buddy.h  cr_api.c  cr_api.h  dma_api.c  dmaatb_api.c  dmaatb_api.h  elf_dump.c  elf_dump.h  mm_comm.c  mm_stat.c  mm_stat.h  pagetable.h  pciatb_api.c  pciatb_api.h  pgtbl.c  pmap.c  pmap.h  ve_mem.c  ve_mem.h  ve_memory.c  ve_memory_def.h  ve_shm.c  ve_shm.h  vehva_mgmt.c  vehva_mgmt.h
src/veos/dma/: Makefile.am  dma.h  dma_api.c  dma_deallocator.c  dma_deallocator.h  dma_hw.c  dma_hw.h  dma_intr.c  dma_intr.h  dma_log.c  dma_log.h  dma_private.h  dma_reqlist.c  dma_reqlist.h  dma_reqlist_private.h  vedma_hw.h
src/veos/ived/: Makefile.am  veos_cr.c  veos_cr.h  veos_devmem.c  veos_devmem.h  veos_ived.c  veos_ived.h  veos_ived_common.c  veos_ived_common.h  veos_ived_misc.c  veos_ived_misc.h  veos_ived_private.h  veos_veshm.c  veos_veshm.h  veos_veshm_core.h  veos_veshm_interface.c  veos_veshm_interface.h  veos_veshm_ipc.c  veos_veshm_ipc.h  veos_vhshm.c  veos_vhshm.h
src/veos/main/: Makefile.am  amm_psm_if.h  mm_common.h  pci.c  sysve.c  userdma.c  veos.h  veos_handler.c  veos_handler.h  veos_init.c  veos_ipc.c  veos_ipc.h  veos_main.c  veos_sock.h.in  vesync.c  vesync.h  vhve.c
src/veos/pps/: Makefile.am  ve_swap.h  ve_swap_in.c  ve_swap_init.c  ve_swap_out.c  ve_swap_request.h  ve_swap_sysve.c  ve_swap_thread.c
src/veos/psm/: Makefile.am  clone_handler.c  locking_handler.c  locking_handler.h  psm_clone.h  psm_clone_handler.c  psm_comm.c  psm_comm.h  psm_main.h  psm_pseudo_ipc.c  psm_pseudo_ipc.h  psm_rpm_interfaces.c  psm_rpm_interfaces.h  psm_signal_handler.c  psm_signal_handler.h  psm_stat.c  psm_stat.h  psm_task_mgmt.c  psm_task_mgmt.h  ptrace_req.c  ptrace_req.h  task_exit.c  task_mgmt.c  task_mgmt.h  task_sched.c  task_sched.h  task_signal.c  task_signal.h  ve_clone.h  ve_coredump_helper.c  ve_coredump_helper.h.in
src/veos/ptrace/: Makefile.am  ptrace_comm.c  ptrace_comm.h  remove_me
src/veos/vemm/: Makefile.am  vemmagent_fallback.h  veos_vemm.c  veos_vemm.h  veos_vemm_handler.c  veos_vemm_handler.h  veos_vemm_log.h
ve1/lib/libvepseudo/common/: Makefile.am  sysve_os.c
ve1/lib/libvepseudo/psm/: Makefile.am  exception.c
ve1/src/veos/amm/: Makefile.am  alloc.c  cr_api.c  dmaatb_api.c  elf_dump.c  mm_stat.c  pciatb_api.c  pgtbl.c  ve_mem.c  ve_mem_ve1.h  ve_memory_ve1.c  ve_memory_ve1.h  vehva_mgmt.c  vehva_mgmt_ve1.h
(+98 files in other folders)
