SUBDIRS = limits.d sysctl.d
dist_sysconf_DATA = log4crc vemodcode.conf
dist_ve_os_launcher_conf_DATA = ve-ived.options veos_timer.options veswap.options veos_power_throttle.options veos_vm.options vemodcode.options
dist_binfmt_DATA = ve.conf
dist_veldconf_DATA = veos.conf
dist_feature_list_DATA = feature_list
