ve_musl_include_HEADERS = \
	veos_defs.h \
	veshm_defs.h \
	vecr_defs.h \
	sysve.h \
	vhcall.h \
	vhshm_defs.h \
	veaio_defs.h \
	veacc_io_defs.h

ve_include_HEADERS = \
	veos_defs.h \
	veshm_defs.h \
	vecr_defs.h \
	sysve.h \
	vhcall.h \
	vhshm_defs.h \
	veaio_defs.h \
	veacc_io_defs.h \
	mempolicy.h

libvepseudo_headers_HEADERS = \
	comm_request.h \
	mm_type.h \
	ve_memory.h \
	vemva_layout.h

noinst_HEADERS = \
	vhve_request.h \
	ived_request.h \
	ve_atomic.h \
	ve_list.h
